Fixed some layout issues that came up on a different jenkins instance

--- a/master.css
+++ b/master.css
@@ -1,4 +1,5 @@
-@import url("http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext");
+
 body {
     background: #fff!important;
 }
@@ -291,6 +292,15 @@ td.inactive:hover {
     border: none;
 }
 
+.pane-header, .pane-footer {
+  padding: 0px 0px;
+  background-color: rgba(0,0,0,  0);
+  border: solid 0px rgba(0,0,0,  0);
+  border-left: none;
+  border-right: none;
+  color: #3b3b3b;
+}
+
 li.item, li.item a {
     height: 35px !important;
     background: transparent !important;
@@ -373,6 +383,11 @@ table {
 
 .subtasks,.task {
     min-height: 28px!important;
+}
+
+.subtasks {
+    padding-left: 1em;
+    padding-top: 1em;
 }
 
 .subtasks:empty {
